--- a/invoice.html
+++ b/invoice.html
@@ -8,64 +8,56 @@
   <body>
     <header class="clearfix">
       <div id="logo">
-        <img src="logo.png">
+        <img src="HorizontalLogo.png">
       </div>
-      <h1>INVOICE 3-2-1</h1>
+      <h1>INVOICE</h1>
       <div id="company" class="clearfix">
-        <div>Company Name</div>
-        <div>455 Foggy Heights,<br /> AZ 85004, US</div>
-        <div>(602) 519-0450</div>
-        <div><a href="mailto:company@example.com">company@example.com</a></div>
+        <div>Diversified Risk Solutions LLC</div>
+        <div>154 Grand Street<br />New York, NY 10013</div>
+        <div>(855) 348-7475</div>
+        <div><a href="mailto:company@example.com">team@divrisk.com</a></div>
       </div>
       <div id="project">
-        <div><span>PROJECT</span> Website development</div>
-        <div><span>CLIENT</span> John Doe</div>
-        <div><span>ADDRESS</span> 796 Silver Harbour, TX 79273, US</div>
+        <div><span>INSURED NAME</span>XXX Company</div>
+        <div><span>CONTACT NAME</span>John Doe</div>
+        <div><span>ADDRESS</span>Business Address for the Clients</div>
         <div><span>EMAIL</span> <a href="mailto:john@example.com">john@example.com</a></div>
-        <div><span>DATE</span> August 17, 2015</div>
-        <div><span>DUE DATE</span> September 17, 2015</div>
+        <div><span>DATE</span>Today's Date</div>
+        <div><span>DUE DATE</span>Invoice Due Date</div>
       </div>
     </header>
     <main>
       <table>
         <thead>
           <tr>
-            <th class="service">SERVICE</th>
+            <th class="service">POLICY</th>
             <th class="desc">DESCRIPTION</th>
-            <th>PRICE</th>
-            <th>QTY</th>
-            <th>TOTAL</th>
+            <th>AMOUNT</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td class="service">Design</td>
-            <td class="desc">Creating a recognizable design solution based on the company's existing visual identity</td>
-            <td class="unit">$40.00</td>
-            <td class="qty">26</td>
+            <td class="service">General Liabilit</td>
+            <td class="desc">Downpayment for 2/22/18-2/22/19 general liability policy</td>
             <td class="total">$1,040.00</td>
           </tr>
           <tr>
-            <td class="service">Development</td>
-            <td class="desc">Developing a Content Management System-based Website</td>
-            <td class="unit">$40.00</td>
-            <td class="qty">80</td>
+            <td class="service">Professional Liability</td>
+            <td class="desc">2nd payment for 1/8/18-1/8/19 policy</td>
             <td class="total">$3,200.00</td>
           </tr>
           <tr>
-            <td class="service">SEO</td>
-            <td class="desc">Optimize the site for search engines (SEO)</td>
-            <td class="unit">$40.00</td>
-            <td class="qty">20</td>
+            <td class="service">Brokers Fee</td>
+            <td class="desc">Service fee</td>
             <td class="total">$800.00</td>
           </tr>
-          <tr>
+         <!-- <tr>
             <td class="service">Training</td>
             <td class="desc">Initial training sessions for staff responsible for uploading web content</td>
             <td class="unit">$40.00</td>
             <td class="qty">4</td>
             <td class="total">$160.00</td>
-          </tr>
+          </tr>-->
           <tr>
             <td colspan="4">SUBTOTAL</td>
             <td class="total">$5,200.00</td>
