--- a/invoice.html
+++ b/invoice.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Example 1</title>
+    <title>Diversified Risk Solution Invoice</title>
     <link rel="stylesheet" href="style.css" media="all" />
   </head>
   <body>
@@ -18,8 +18,8 @@
         <div><a href="mailto:company@example.com">team@divrisk.com</a></div>
       </div>
       <div id="project">
-        <div><span>INSURED NAME</span> XXX Company</div>
-        <div><span>CONTACT NAME</span> John Doe</div>
+        <div><span>INSURED NAME  </span> XXX Company</div>
+        <div><span>CONTACT NAME  </span> John Doe</div>
         <div><span>ADDRESS</span> Business Address for the Clients</div>
         <div><span>EMAIL</span> <a href="mailto:john@example.com">john@example.com</a></div>
         <div><span>DATE</span> Today's Date</div>
@@ -32,6 +32,8 @@
           <tr>
             <th class="service">POLICY</th>
             <th class="desc">DESCRIPTION</th>
+            <th></th>
+            <th></th>
             <th>AMOUNT</th>
           </tr>
         </thead>
