--- a/invoice.html
+++ b/invoice.html
@@ -18,8 +18,8 @@
         <div><a href="mailto:company@example.com">team@divrisk.com</a></div>
       </div>
       <div id="project">
-        <div><span>INSURED NAME  </span> XXX Company</div>
-        <div><span>CONTACT NAME  </span> John Doe</div>
+        <div><span>INSURED NAME</span>&nbsp;&nbsp; XXX Company</div>
+        <div><span>CONTACT NAME</span>&nbsp;&nbsp; John Doe</div>
         <div><span>ADDRESS</span> Business Address for the Clients</div>
         <div><span>EMAIL</span> <a href="mailto:john@example.com">john@example.com</a></div>
         <div><span>DATE</span> Today's Date</div>
