--- a/invoice.html
+++ b/invoice.html
@@ -20,10 +20,10 @@
       <div id="project">
         <div><span>INSURED NAME</span>&nbsp;&nbsp; XXX Company</div>
         <div><span>CONTACT NAME</span>&nbsp;&nbsp; John Doe</div>
-        <div><span>ADDRESS</span> Business Address for the Clients</div>
+        <div><span>ADDRESS</span>122 Grand Street, New York, NY 10013</div>
         <div><span>EMAIL</span> <a href="mailto:john@example.com">john@example.com</a></div>
-        <div><span>DATE</span> Today's Date</div>
-        <div><span>DUE DATE</span> Invoice Due Date</div>
+        <div><span>DATE</span>2/22/18</div>
+        <div><span>DUE DATE</span>2/27/18</div>
       </div>
     </header>
     <main>
